--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ FEMSimulation/dataset/FEMsimulation
 /frictionAnalysis/testSolve
 /frictionAnalysis/functionsOld
 /frictionAnalysis/figures
+experiments/
 
 
 
